--- a/android/app/src/main/res/xml/home_widget_provider.xml
+++ b/android/app/src/main/res/xml/home_widget_provider.xml
@@ -2,7 +2,7 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:minWidth="150dp"
     android:minHeight="100dp"
-    android:updatePeriodMillis="1800000"
+    android:updatePeriodMillis="300000"
     android:initialLayout="@layout/home_widget"
     android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen" /> 
